// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ComplaintsList with complaints 1`] = `
<div>
  <div>
    <div>
      Denuncia
    </div>
    <div>
      Tipo
    </div>
    <div>
      Fecha
    </div>
  </div>
  <div>
    <Link
      className="button"
      replace={false}
      to="/add"
    >
      Denunciar
    </Link>
    <div
      key="1"
    >
      <p>
        <Link
          replace={false}
          to="show/1"
        >
          Me robaron mi celular
        </Link>
      </p>
    </div>
    <div
      key="2"
    >
      <p>
        <Link
          replace={false}
          to="show/2"
        >
          Me robaron mi celular
        </Link>
      </p>
    </div>
    <div
      key="3"
    >
      <p>
        <Link
          replace={false}
          to="show/3"
        >
          Me robaron mi celular
        </Link>
      </p>
    </div>
  </div>
</div>
`;

exports[`should correctly render ComplaintsList with no complaints 1`] = `
<div>
  <div>
    <div>
      Denuncia
    </div>
    <div>
      Tipo
    </div>
    <div>
      Fecha
    </div>
  </div>
  <div>
    <Link
      className="button"
      replace={false}
      to="/add"
    >
      Denunciar
    </Link>
    <div>
      <span>
        No encontramos ninguna denuncia.
      </span>
    </div>
  </div>
</div>
`;

exports[`should correctly render LoadingPage when isLoading is true 1`] = `<LoadingPage />`;
